<resources>
    <string name="app_name">Basalam</string>
    <string name="user_name">Mohammd Reza Saeidi</string>
    <string name="shopping_bag">Shopping Bag</string>
    <string name="language">Language</string>
    <string name="font_size">Font Size</string>
    <string name="night_mode">Night Mode</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="version">Version</string>
    <string name="nav_drawer_open" translatable="false">Open</string>
    <string name="nav_drawer_close" translatable="false">Close</string>
    <string name="font_size_small">Small</string>
    <string name="font_size_normal">Normal</string>
    <string name="font_size_large">Large</string>
    <string name="font_size_x_large">Extra Large</string>
    <string name="dialog_select_font_size_title">Select Font Size</string>
    <string name="dialog_select_lang_title">Select Language</string>
    <string name="farsi" translatable="false">فارسی</string>
    <string name="english" translatable="false">English</string>
    <string name="search">Search</string>
    <string name="nothing_found">There Is Nothing To Show</string>
    <string name="currency">R</string>
    <string name="weight_unit">g</string>
    <string name="added_to_shopping_bag">Added To Shopping Bag</string>
    <string name="removed_from_shopping_bag">Removed From Shopping Bag</string>
    <string name="empty_shopping_bag">Shopping Bag Is Empty</string>
    <string name="refresh_alert">Swipe Down To Update</string>
    <string name="error_connection">Make sure that you\'re connected to the Internet</string>
</resources>